# HeftyTest

./: .gitignore  README.md  agent.md  background.md  pyproject.toml  reviewer.md  task.md
docs/: code_basis.md  code_structure.md  publication_gap.md  task1_reading_notes.md
lattice/: README.md
lattice/benchmark_wlc/: README.md  manifest.json
lattice/benchmark_wlc/data_fit/: Meff_fit_T195_r0p224.txt  Meff_fit_T195_r0p505.txt  Meff_fit_T195_r0p757.txt  Meff_fit_T251_r0p224.txt  Meff_fit_T251_r0p505.txt  Meff_fit_T251_r0p757.txt  Meff_fit_T293_r0p224.txt  Meff_fit_T293_r0p505.txt  Meff_fit_T293_r0p757.txt  Meff_fit_T352_r0p224.txt  Meff_fit_T352_r0p505.txt  Meff_fit_T352_r0p757.txt
lattice/benchmark_wlc/data_raw/: Meff_raw_T195_r0p224.txt  Meff_raw_T195_r0p505.txt  Meff_raw_T195_r0p757.txt  Meff_raw_T251_r0p224.txt  Meff_raw_T251_r0p505.txt  Meff_raw_T251_r0p757.txt  Meff_raw_T293_r0p224.txt  Meff_raw_T293_r0p505.txt  Meff_raw_T293_r0p757.txt  Meff_raw_T352_r0p224.txt  Meff_raw_T352_r0p505.txt  Meff_raw_T352_r0p757.txt
lattice/benchmark_wlc/data_subtracted/: Meff_sub_T195_r0p224.txt  Meff_sub_T195_r0p505.txt  Meff_sub_T195_r0p757.txt  Meff_sub_T251_r0p224.txt  Meff_sub_T251_r0p505.txt  Meff_sub_T251_r0p757.txt  Meff_sub_T293_r0p224.txt  Meff_sub_T293_r0p505.txt  Meff_sub_T293_r0p757.txt  Meff_sub_T352_r0p224.txt  Meff_sub_T352_r0p505.txt  Meff_sub_T352_r0p757.txt
review/: 20260403-iteration1.md
src/hefty_tm/: __init__.py  benchmark_task1.py  cli.py  datasets.py  fetch.py  papers.py  rates.py  spectral.py  static_tmatrix.py  wilson_line.py
tests/: test_core.py
(+4 files in other folders)
